--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "mongoose": "^4.5.10"
+    "express-session": "^1.14.1",
+    "jade": "^1.11.0",
+    "mongoose": "^4.5.10",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   }
 }
